# Alpha_Compiler

./: CMakeLists.txt  README.md
BC_generation/: Makefile  parser.y  scanner.l
BC_generation/libs/: abc_writer.c  abc_writer.h  arraylist.c  arraylist.h  globals.h  intermediate_code.c  intermediate_code.h  stack.c  stack.h  symlist.h  symtable.c  symtable.h  tcode_generation.c  tcode_generation.h
BC_generation/test_files/: special_test.asc  test01.asc  test04.asc  test05.asc  test07.asc  test10.asc  test12.asc
IR_generation/: Makefile  parser.y  scanner.l
IR_generation/libs/: globals.h  handlers.c  handlers.h  intermediate_code.c  intermediate_code.h  stack.c  stack.h  structs.c  structs.h  symlist.c  symlist.h  symtable.c  symtable.h
IR_generation/test_files/: test02.asc  test03.asc  test06.asc  test08.asc  test09.asc  test11.asc  test12.asc
lexical_analyzer/: Makefile
lexical_analyzer/custom_scanner/: custom_scanner.c  custom_scanner.h
lexical_analyzer/flex_scanner/: scanner.l
lexical_analyzer/libs/: comment_stack.c  comment_stack.h  token_queue.c  token_queue.h
lexical_analyzer/test_files/: comments.txt  floats.txt  ids.txt  integers.txt  keywords.txt  operators.txt  punctuations.txt  strings.txt
syntactic_analyzer/: Makefile  parser.y  scanner.l
syntactic_analyzer/libs/: stack.c  stack.h  structs.c  structs.h  symlist.c  symlist.h  symtable.c  symtable.h
syntactic_analyzer/testfiles_2019/Errors/: Error1.asc
